Change Seyed Name

--- a/_data/TAs.yml
+++ b/_data/TAs.yml
@@ -1,4 +1,4 @@
-- name: Seyed M.J. Feizabadi Sani
+- name: Sayyid MuhammadJavad Feyzabadi Sani
   subtitle: Lead TA
   email: smjfas@gmail.com
   img: assets/images/TAs/sani.jpg
