--- a/_data/materials.yml
+++ b/_data/materials.yml
@@ -1,6 +1,6 @@
-# - title: Introduction
-#   assets:
-#     - file: Slide
-#       link: assets/materials/slides/LA_Fall2022_01_Introduction.pdf
-#     - file: Syllabus
-#       link: assets/materials/LA_Fall2022_Syllabus.pdf
+- title: Introduction
+  assets:
+    - file: Slide
+      link: assets/materials/SML_Spring2023_Syllabus.pdf
+    - file: Syllabus
+      link: assets/materials/SML_Spring2023_Syllabus.pdf
