--- a/_data/materials.yml
+++ b/_data/materials.yml
@@ -18,8 +18,10 @@
   assets:
     - file: Slide
       link: assets/materials/SML-PGM-01-02-Spring-2023.pdf
-- title: Probabilistic Graphical Models
+- title: Privacy
   subtitle: Week 4
   assets:
     - file: Slide
       link: assets/materials/SML-Privacy-Part01-Spring-2023.pdf
+    - file: Slide
+      link: assets/materials/SML-Privacy-05-06-Spring-2023.pdf
